--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -109,6 +109,7 @@ jobs:
           repository: 'ananasGit/github-actions-workflow-templates-scripts'
           token: ${{ secrets.CHECKOUT_TOKEN }}
           path: 'workflow-scripts'
+          fetch-depth: 1
 
       - name: Clone Repository (Latest)
         uses: actions/checkout@v3
@@ -119,12 +120,6 @@ jobs:
         if: inputs.GIT_REF != ''
         with:
           ref: ${{ inputs.GIT_REF }}
-
-      - name: Extract branch name
-        id: extract_branch
-        shell: bash
-        run: |
-          $GITHUB_WORKSPACE/workflow-scripts/common/extract-branch.sh
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
