--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -104,15 +104,15 @@ jobs:
     needs: validate_deploy
 
     steps:
-#      - name: Clone Repository (Latest)
-#        uses: actions/checkout@v3
-#        if: inputs.GIT_REF == ''
-#
-#      - name: Clone Repository (Custom Ref)
-#        uses: actions/checkout@v3
-#        if: inputs.GIT_REF != ''
-#        with:
-#          ref: ${{ inputs.GIT_REF }}
+      - name: Clone Repository (Latest)
+        uses: actions/checkout@v3
+        if: inputs.GIT_REF == ''
+
+      - name: Clone Repository (Custom Ref)
+        uses: actions/checkout@v3
+        if: inputs.GIT_REF != ''
+        with:
+          ref: ${{ inputs.GIT_REF }}
 
       - uses: actions/checkout@v3
         with:
@@ -135,10 +135,10 @@ jobs:
       - name: Checkout argoCD repo
         uses: actions/checkout@v3
         with:
-          repository: ${{ env.ARGO_CD_REPO }}
+          repository: ${{ inputs.ARGO_CD_REPO }}
           token: ${{ secrets.CHECKOUT_TOKEN }}
           path: argocd
-          ref: ${{ env.ARGO_CD_REPO_BRANCH }}
+          ref: ${{ inputs.ARGO_CD_REPO_BRANCH }}
           fetch-depth: 1
 
       - name: Create local changes
