NNS-1582 Create template for STAGE workflow, fix 3

--- a/.github/workflows/ms-stage-deploy.yml
+++ b/.github/workflows/ms-stage-deploy.yml
@@ -58,6 +58,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - uses: actions/checkout@v3
+        with:
+          repository: 'ananasGit/github-actions-workflow-templates-scripts'
+          token: ${{ secrets.CHECKOUT_TOKEN }}
+          path: 'workflow-scripts'
+          fetch-depth: 1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -89,7 +96,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - uses: actions/checkout@master
 
       - name: Configure AWS credentials DEV
         uses: aws-actions/configure-aws-credentials@v1
