--- a/.github/workflows/ms-hotfix-deploy.yml
+++ b/.github/workflows/ms-hotfix-deploy.yml
@@ -72,6 +72,16 @@ jobs:
     name: Build-Docker-Image
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+      - uses: actions/checkout@v3
+        with:
+          repository: 'ananasGit/github-actions-workflow-templates-scripts'
+          token: ${{ secrets.CHECKOUT_TOKEN }}
+          path: 'workflow-scripts'
+          fetch-depth: 1
       - name: Clone Repository (Latest)
         uses: actions/checkout@v2
         if: inputs.GIT-REF == ''
