add sonarqube token in secrets

--- a/.github/workflows/ms-dev-deploy.yml
+++ b/.github/workflows/ms-dev-deploy.yml
@@ -63,6 +63,9 @@ on:
       CHECKOUT_TOKEN:
         description: checkout token
         required: true
+      SONARQUBE_TOKEN:
+        description: SonarQube token
+        required: false
 
 name: DEV - deploy
 
