add sonarqube host in secrets

--- a/.github/workflows/ms-dev-deploy.yml
+++ b/.github/workflows/ms-dev-deploy.yml
@@ -66,6 +66,9 @@ on:
       SONARQUBE_TOKEN:
         description: SonarQube token
         required: false
+      SONARQUBE_HOST:
+        description: SonarQube host
+        required: false
 
 name: DEV - deploy
 
