--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -66,6 +66,7 @@ jobs:
       - name: Verify CODE FREEZE
         shell: bash
         run: |
+          chmod +x verify-code-freeze.sh
           $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/verify-code-freeze.sh
 
   get_commit_hash:
