--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -105,17 +105,34 @@ jobs:
         run: |
           echo ${{ steps.commit_hash.outputs.commit_hash }}
 
-      - name: Checkout argoCD repo-stage
-        uses: actions/checkout@v2
+      - name: Checkout ArgoCD
+        uses: actions/checkout@v3
         with:
           repository: ${{ inputs.ARGO_CD_REPO }}
           token: ${{ secrets.CHECKOUT_TOKEN }}
-          path: ${{ inputs.ARGO_DEST_CHECKOUT_FOLDER }}
-          ref: ${{ inputs.PROMOTE_DESTINATION }}
+          path: argocd
+          ref: ${{ inputs.ARGO_CD_REPO_BRANCH }}
 
-      - name: Create local changes for stage manifest
+      - name: Create local changes
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ inputs.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ inputs.BUILT_BRANCH }}
+          ARGO_CD_FILE_TO_UPDATE: ${{ inputs.ARGO_CD_FILE_TO_UPDATE }}
         run: |
-          $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/create-local-changes.sh
+          $GITHUB_WORKSPACE/workflow-scripts/dev/create-local-changes.sh
+
+#      - name: Checkout argoCD repo-stage
+#        uses: actions/checkout@v2
+#        with:
+#          repository: ${{ inputs.ARGO_CD_REPO }}
+#          token: ${{ secrets.CHECKOUT_TOKEN }}
+#          path: ${{ inputs.ARGO_DEST_CHECKOUT_FOLDER }}
+#          ref: ${{ inputs.PROMOTE_DESTINATION }}
+#
+#      - name: Create local changes for stage manifest
+#        run: |
+#          $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/create-local-changes.sh
 
       - name: Commit files
         run: |
