--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -122,17 +122,6 @@ jobs:
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/create-local-changes.sh
 
-#      - name: Checkout argoCD repo-stage
-#        uses: actions/checkout@v2
-#        with:
-#          repository: ${{ inputs.ARGO_CD_REPO }}
-#          token: ${{ secrets.CHECKOUT_TOKEN }}
-#          path: ${{ inputs.ARGO_DEST_CHECKOUT_FOLDER }}
-#          ref: ${{ inputs.PROMOTE_DESTINATION }}
-#
-#      - name: Create local changes for stage manifest
-#        run: |
-#          $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/create-local-changes.sh
 
       - name: Commit files
         run: |
@@ -140,10 +129,12 @@ jobs:
           
 
       - name: checkout MS Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
+          repository: 'ananasGit/github-actions-workflow-templates-scripts'
           token: ${{ secrets.CHECKOUT_TOKEN }}
-          fetch-depth: 0
+          path: 'workflow-scripts'
+          fetch-depth: 1
 
       - name: Tag ms repo origin
         run: |
