--- a/.github/workflows/ms-hotfix-deploy.yml
+++ b/.github/workflows/ms-hotfix-deploy.yml
@@ -48,7 +48,7 @@ on:
         type: string
         description: sonarqube project name
         required: false
-        default: false
+        default: "false"
     secrets:
       AWS_REGION:
         description: aws region
