--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -113,6 +113,10 @@ jobs:
           path: argocd
           ref: ${{ inputs.ARGO_CD_REPO_BRANCH }}
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
       - name: Create local changes
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
