--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -113,6 +113,13 @@ jobs:
           path: argocd
           ref: ${{ inputs.ARGO_CD_REPO_BRANCH }}
 
+      - name: Configure AWS credentials DEV
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
