--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -148,9 +148,11 @@ jobs:
       - name: Scan Docker image
         id: docker-scan
         uses: alexjurkiewicz/ecr-scan-image@v1.7.0
+        env:
+          IMAGE_TAG: ${{ inputs.BUILT_BRANCH }}
         with:
           repository: ${{ inputs.ECR_REPOSITORY }}
-          tag: ${{ inputs.BUILT_BRANCH }}-$({ github.sha::7 )}
+          tag: ${IMAGE_TAG}-${GITHUB_SHA::7}
 
       - name: Check vulnerabilities
         run: echo "${{ steps.docker-scan.outputs.total }} total vulnerabilities."
