add ecr scan step v6

--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -150,7 +150,7 @@ jobs:
         uses: alexjurkiewicz/ecr-scan-image@v1.7.0
         with:
           repository: ${{ inputs.ECR_REPOSITORY }}
-          tag: "${{ inputs.BUILT_BRANCH }}-${GITHUB_SHA:0:7}"
+          tag: ${GITHUB_SHA:0:7}
 
       - name: Check vulnerabilities
         run: echo "${{ steps.docker-scan.outputs.total }} total vulnerabilities."
