upgrade hotfix deploy

--- a/.github/workflows/ms-hotfix-deploy.yml
+++ b/.github/workflows/ms-hotfix-deploy.yml
@@ -2,6 +2,7 @@ on:
   workflow_call:
     inputs:
       GIT-REF:
+        type: string
         description: Git Ref (Optional)
         required: false
       ECR_REPOSITORY:
