add ECR Scan step

--- a/.github/workflows/ms-dev-deploy.yml
+++ b/.github/workflows/ms-dev-deploy.yml
@@ -144,7 +144,19 @@ jobs:
           DOCKER_FILE: ${{ inputs.DOCKER_FILE }}
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/build-tag-push-docker-image-to-aws-ecr.sh
+      
+      - name: Short sha
+        id: short_sha
+        run: |
+          $GITHUB_WORKSPACE/workflow-scripts/dev/create-short-sha.sh
 
+      - name: Scan Docker image
+        id: docker-scan
+        uses: alexjurkiewicz/ecr-scan-image@v1.7.0
+        with:
+          repository: ${{ inputs.ECR_REPOSITORY }}
+          tag: ${{ inputs.BUILT_BRANCH }}-${{ steps.short_sha.outputs.short_sha }}
+          fail_threshold: high
 
   deploy:
     name: ArgoCD Deploy
