update cap workflows

--- a/.github/workflows/ms-cap-deploy.yml
+++ b/.github/workflows/ms-cap-deploy.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           repository: ${{ inputs.ARGO_CD_REPO }}
           token: ${{ secrets.CHECKOUT_TOKEN }}
-          path: ${{ intputs.ARGO_CD_CHECKOUT_FOLDER }}
+          path: ${{ inputs.ARGO_CD_CHECKOUT_FOLDER }}
           ref: ${{ inputs.ARGO_CD_REPO_BRANCH }}
 
       - name: Create local changes
