--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -205,7 +205,7 @@ jobs:
           fail_threshold: high
 
   upload:
-    needs: build
+    #needs: Build-Docker-Image
     #runs-on: [self-hosted, dev]
     runs-on: ubuntu-latest
     name: Upload s3
