--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -134,13 +134,13 @@ jobs:
       ##### START FOR AQA TESTING ####
       - name: Install Google Chrome
         run: |
-          chmod +x ./github-actions-workflow-templates-scripts/dev/installChromeF.sh
-          ./github-actions-workflow-templates-scripts/dev/installChromeF.sh
+          chmod +x ./ananasGit/github-actions-workflow-templates-scripts/dev/installChromeF.sh
+          ./ananasGit/github-actions-workflow-templates-scripts/dev/installChromeF.sh
           chmod +x ./gradlew
       - name: Build with Gradle
         env:
-          QA_ENV: ${{ github.event.inputs.qa_env || 'qa' }}
-          QA_TAG: ${{ github.event.inputs.qa_tag || '@night' }}
+          QA_ENV: ${{ github.event.inputs.qa_env || 'dev' }}
+          QA_TAG: ${{ github.event.inputs.qa_tag || '@pipeline' }}
           TA_API_SECRET: ${{ secrets.TESTRAIL_API_SECRET }}
           TA_API_USERNAME: ${{ secrets.TESTRAIL_API_USERNAME }}
         #          DB_USER: ${{ secrets.AWS_RDS_QA_AUTOMATION_USERNAME }}
