test add AQA tests 1.9

--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -216,8 +216,8 @@ jobs:
       - name: Login upload
         uses: shallwefootball/s3-upload-action@master
         with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_KEY}}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY}}
           aws_bucket: 'allure.svc.sandbox.ananastest.com'
           source_dir: '.'
           destination_dir: 'iamqaautomation'
