test add AQA tests 2.3

--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -203,25 +203,25 @@ jobs:
           tag: ${{ inputs.BUILT_BRANCH }}-${{ steps.short_sha.outputs.short_sha }}
           fail_threshold: high
 
-#  upload:
-#    needs: build
-#    #runs-on: [self-hosted, dev]
-#    runs-on: ubuntu-latest
-#    name: Upload s3
-#    steps:
-#      - name: Checkout new branch
-#        uses: actions/checkout@v2
-#        with:
-#          ref: gh-pages
-#      - name: Login upload
-#        uses: shallwefootball/s3-upload-action@master
-#        with:
-#          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws_bucket: 'allure.svc.sandbox.ananastest.com'
-#          source_dir: '.'
-#          destination_dir: 'iamqaautomation'
-#          ##### END FOR AQA TESTING ####
+  upload:
+    needs: build
+    #runs-on: [self-hosted, dev]
+    runs-on: ubuntu-latest
+    name: Upload s3
+    steps:
+      - name: Checkout new branch
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+      - name: Login upload
+        uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ALLURE_QA_TEST }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_KEY_ALLURE_QA_TEST }}
+          aws_bucket: 'allure.svc.sandbox.ananastest.com'
+          source_dir: '.'
+          destination_dir: 'iamdevautomation'
+          ##### END FOR AQA TESTING ####
 
   deploy:
     name: ArgoCD Deploy
