--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -71,7 +71,8 @@ on:
         required: false
 
 name: DEV - deploy
-
+env:
+  GITHUB_PAGES_WEBSITE_URL: 'https://allure.svc.sandbox.ananastest.com/iamdevautomation'
 jobs:
   build:
     name: Build-Docker-Image
@@ -138,12 +139,12 @@ jobs:
           chmod +x ./gradlew
       - name: Build with Gradle
         env:
-          DEV_ENV: ${{ github.event.inputs.dev_env || 'dev' }}
-          DEV_TAG: ${{ github.event.inputs.dev_tag || '@pipeline' }}
+          MASTER_ENV: ${{ github.event.inputs.master_env || 'master' }}
+          MASTER_TAG: ${{ github.event.inputs.master_tag || '@pipeline' }}
           TA_API_SECRET: ${{ secrets.TESTRAIL_API_SECRET }}
           TA_API_USERNAME: ${{ secrets.TESTRAIL_API_USERNAME }}
         run: |
-          ./gradlew cucumber -Denv=$DEV_ENV -Ddriver=headlessChrome -Dcucumber.filter.tags="$DEV_TAG"
+          ./gradlew cucumber -Denv=$MASTER_ENV -Ddriver=headlessChrome -Dcucumber.filter.tags="$MASTER_TAG"
         continue-on-error: true
 
       - name: Get Allure history
