--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -69,14 +69,6 @@ on:
       SONARQUBE_HOST:
         description: SonarQube host
         required: false
-      qa_env:
-        description: 'QA env'
-        required: true
-        default: 'dev'
-      qa_tag:
-        description: 'QA tag'
-        required: true
-        default: '@sunnyDay'
 
 name: DEV - deploy
 env:
@@ -147,7 +139,7 @@ jobs:
           chmod +x ./gradlew
       - name: Build with Gradle
         env:
-          QA_ENV: ${{ github.event.inputs.qa_env || 'master' }}
+          QA_ENV: ${{ github.event.inputs.qa_env || 'qa' }}
           QA_TAG: ${{ github.event.inputs.qa_tag || '@pipeline' }}
           TA_API_SECRET: ${{ secrets.TESTRAIL_API_SECRET }}
           TA_API_USERNAME: ${{ secrets.TESTRAIL_API_USERNAME }}
