needs: on argo cd add

--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -232,9 +232,9 @@ jobs:
           ##### END FOR AQA TESTING ####
 
   deploy:
+    needs: upload
     name: ArgoCD Deploy
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
       - uses: actions/checkout@v3
