--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -55,6 +55,16 @@ on:
         description: Github url s3
         required: true
         default: false
+      DEV_ENV:
+        type: string
+        description: env
+        required: true
+        default: false
+      DEV_TAG:
+        type: string
+        description: tag
+        required: true
+        default: false
     secrets:
       AWS_REGION:
         description: aws region
@@ -148,8 +158,8 @@ jobs:
           chmod +x ./gradlew
       - name: Build with Gradle
         env:
-          DEV_ENV: ${{ github.event.inputs.dev_env || 'dev' }}
-          DEV_TAG: ${{ github.event.inputs.dev_tag || '@pipeline' }}
+          DEV_ENV: ${{ input.DEV_ENV }}
+          DEV_TAG: ${{ input.DEV_TAG }}
           TA_API_SECRET: ${{ secrets.TESTRAIL_API_SECRET }}
           TA_API_USERNAME: ${{ secrets.TESTRAIL_API_USERNAME }}
         run: |
