--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -152,6 +152,13 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       ##### START FOR AQA TESTING ####
+#      - uses: actions/checkout@v3
+#        with:
+#          repository: 'ananasGit/iam-qa-automation'
+#          token: ${{ secrets.CHECKOUT_TOKEN }}
+#          path: 'workflow-scripts'
+#          fetch-depth: 1
+
       - name: Install Google Chrome
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/installChromeF.sh
