--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -152,12 +152,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       ##### START FOR AQA TESTING ####
-#      - uses: actions/checkout@v3
-#        with:
-#          repository: 'ananasGit/iam-qa-automation'
-#          token: ${{ secrets.CHECKOUT_TOKEN }}
-#          path: 'workflow-scripts'
-#          fetch-depth: 1
+      - uses: actions/checkout@v3
+        with:
+          repository: 'ananasGit/iam-qa-automation'
+          token: ${{ secrets.CHECKOUT_TOKEN }}
+          path: 'build.gradle'
+          fetch-depth: 1
 
       - name: Install Google Chrome
         run: |
