--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -156,7 +156,7 @@ jobs:
         with:
           repository: 'ananasGit/iam-qa-automation'
           token: ${{ secrets.CHECKOUT_TOKEN }}
-          path: 'iam-qa-automation/build.gradle'
+          path: 'iam-qa-automation'
           fetch-depth: 1
 
       - name: Install Google Chrome
@@ -170,6 +170,7 @@ jobs:
           TA_API_SECRET: ${{ secrets.TESTRAIL_API_SECRET }}
           TA_API_USERNAME: ${{ secrets.TESTRAIL_API_USERNAME }}
         run: |
+          cd iam-qa-automation
           ./gradlew cucumber -Denv=$DEV_ENV -Ddriver=headlessChrome -Dcucumber.filter.tags="$DEV_TAG"
         continue-on-error: true
 
@@ -187,7 +188,7 @@ jobs:
         #        if: ${{ github.event.inputs.qa_tag == '@smoke' }}
         id: allure-report
         with:
-          allure_results: build/allure-results
+          allure_results: iam-qa-automation/build/allure-results
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
